fix horizontal scrollbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,9 +43,12 @@ h4 {
 
 #header {
 	color: #222;
-	padding-left: 40px;
 	height: 70px;
 	width: 100%;
+}
+
+#header .inner {
+	padding-left: 40px;
 }
 
 #header h1 {
